# fastllm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.json  config.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml  security.yml  test.yml
docs/: api.md  models.md  providers.md  setup.md
infrs/src/api/: chat.rs
infrs/src/model/: mod.rs
src/: config.rs  main.rs
src/api/: chat.rs  embeddings.rs  mod.rs
src/model/: huggingface.rs  llama.rs  mod.rs
src/model/huggingface/: mod.rs
src/models/: cache.rs  config.rs  embeddings.rs  llama.rs  mistral.rs  mod.rs  model_initializer.rs  model_registry.rs  qwen.rs  token_output_stream.rs  traits.rs
src/models/providers/huggingface/: huggingface.rs
src/providers/huggingface/: dtype_utils.rs  huggingface.rs  mod.rs  tokenizer.rs
