[package]
name = "fastllm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http1"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
tokenizers = "0.21.0"
hf-hub = { version = "0.3", features = ["tokio"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
futures = "0.3.30"
futures-util = "0.3.30"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.2", features = ["metal"] }
candle-nn = { version = "0.8.2", features = ["metal"] }
candle-transformers = { version = "0.8.2", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-nn = { version = "0.8.2", features = ["cuda"] }
candle-transformers = { version = "0.8.2", features = ["cuda"] }

[features] 
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]