[package]
name = "fastllm"
version = "0.1.0"
authors = ["Luke Hinds <luke@stacklok.com>"]   
edition = "2021"
description = "A fast and efficient LLM inference library"
license = "MIT"
repository = "https://github.com/stacklok/fastllm"

[dependencies]
axum = { version = "0.7.9", features = ["http1"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.8.2" }
candle-transformers = { version = "0.8.2" }
tokenizers = "0.21.0"
hf-hub = { version = "0.3", features = ["tokio"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
futures = "0.3.30"
futures-util = "0.3.30"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio-stream = "0.1"
bytes = "1.5"

[features]
default = ["cpu"]  # Make CPU the default feature
cpu = []          # CPU-only mode
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda"
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal"
]